[v 3.30] Nautilus crashes when opening multiple windows very fast
Steps to reproduce
- Open Nautilus
- Press ctrl+n (click and hold)
Backtrace
Thread 8 (Thread 0x7fffe4b19700 (LWP 20993)):
#0 0x00007ffff7eab40d in syscall () at /usr/lib/libc.so.6
#1 0x00007ffff7ca2f61 in g_cond_wait_until () at /usr/lib/libglib-2.0.so.0
#2 0x00007ffff7d20cb3 in () at /usr/lib/libglib-2.0.so.0
#3 0x00007ffff7cc4d2b in () at /usr/lib/libglib-2.0.so.0
#4 0x00007ffff7cbd3eb in () at /usr/lib/libglib-2.0.so.0
#5 0x00007ffff7f80a9d in start_thread () at /usr/lib/libpthread.so.0
#6 0x00007ffff7eb0a43 in clone () at /usr/lib/libc.so.6
Thread 5 (Thread 0x7fffe7576700 (LWP 20985)):
#0 0x00007ffff7ea5bb1 in poll () at /usr/lib/libc.so.6
#1 0x00007ffff7cf3ee0 in () at /usr/lib/libglib-2.0.so.0
#2 0x00007ffff7cf3fce in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#3 0x00007fffec0ddbde in () at /usr/lib/gio/modules/libdconfsettings.so
#4 0x00007ffff7cbd3eb in () at /usr/lib/libglib-2.0.so.0
#5 0x00007ffff7f80a9d in start_thread () at /usr/lib/libpthread.so.0
#6 0x00007ffff7eb0a43 in clone () at /usr/lib/libc.so.6
Thread 4 (Thread 0x7fffe7df8700 (LWP 20984)):
#0 0x00007ffff7eab40d in syscall () at /usr/lib/libc.so.6
#1 0x00007ffff7ca2f61 in g_cond_wait_until () at /usr/lib/libglib-2.0.so.0
#2 0x00007ffff7d20cb3 in () at /usr/lib/libglib-2.0.so.0
#3 0x00007ffff7cc4d2b in () at /usr/lib/libglib-2.0.so.0
#4 0x00007ffff7cbd3eb in () at /usr/lib/libglib-2.0.so.0
#5 0x00007ffff7f80a9d in start_thread () at /usr/lib/libpthread.so.0
#6 0x00007ffff7eb0a43 in clone () at /usr/lib/libc.so.6
Thread 3 (Thread 0x7fffed92d700 (LWP 20982)):
#0 0x00007ffff7ea5bb1 in poll () at /usr/lib/libc.so.6
#1 0x00007ffff7cf3ee0 in () at /usr/lib/libglib-2.0.so.0
#2 0x00007ffff7cf4f62 in g_main_loop_run () at /usr/lib/libglib-2.0.so.0
#3 0x00007ffff711fc28 in () at /usr/lib/libgio-2.0.so.0
#4 0x00007ffff7cbd3eb in () at /usr/lib/libglib-2.0.so.0
#5 0x00007ffff7f80a9d in start_thread () at /usr/lib/libpthread.so.0
#6 0x00007ffff7eb0a43 in clone () at /usr/lib/libc.so.6
Thread 2 (Thread 0x7fffee12e700 (LWP 20981)):
#0 0x00007ffff7ea5bb1 in poll () at /usr/lib/libc.so.6
#1 0x00007ffff7cf3ee0 in () at /usr/lib/libglib-2.0.so.0
#2 0x00007ffff7cf3fce in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#3 0x00007ffff7cf4022 in () at /usr/lib/libglib-2.0.so.0
#4 0x00007ffff7cbd3eb in () at /usr/lib/libglib-2.0.so.0
#5 0x00007ffff7f80a9d in start_thread () at /usr/lib/libpthread.so.0
#6 0x00007ffff7eb0a43 in clone () at /usr/lib/libc.so.6
Thread 1 (Thread 0x7fffee173e40 (LWP 20977)):
#0 0x00007ffff7decd7f in raise () at /usr/lib/libc.so.6
#1 0x00007ffff7dd7672 in abort () at /usr/lib/libc.so.6
#2 0x00007ffff7ca2042 in () at /usr/lib/libglib-2.0.so.0
#3 0x00007ffff7ccf6bc in g_assertion_message_expr () at /usr/lib/libglib-2.0.so.0
#4 0x0000555555659fc2 in nautilus_file_get_internal.lto_priv ()
#5 0x000055555565a129 in nautilus_file_get ()
#6 0x000055555567fa8b in real_handles_location ()
#7 0x000055555567b021 in nautilus_window_open_location_full ()
#8 0x0000555555694d09 in action_clone_window ()
--Type <RET> for more, q to quit, c to continue without paging--
#9 0x00007ffff709f3d5 in g_closure_invoke () at /usr/lib/libgobject-2.0.so.0
#10 0x00007ffff708c195 in () at /usr/lib/libgobject-2.0.so.0
#11 0x00007ffff709001e in g_signal_emit_valist () at /usr/lib/libgobject-2.0.so.0
#12 0x00007ffff7090a80 in g_signal_emit () at /usr/lib/libgobject-2.0.so.0
#13 0x00007ffff7156566 in () at /usr/lib/libgio-2.0.so.0
#14 0x00007ffff7633c4f in () at /usr/lib/libgtk-3.so.0
#15 0x00007ffff7633c85 in () at /usr/lib/libgtk-3.so.0
#16 0x00007ffff7633c85 in () at /usr/lib/libgtk-3.so.0
#17 0x00007ffff7633c85 in () at /usr/lib/libgtk-3.so.0
#18 0x00007ffff7633c85 in () at /usr/lib/libgtk-3.so.0
#19 0x00007ffff7633c85 in () at /usr/lib/libgtk-3.so.0
#20 0x00007ffff764e1db in () at /usr/lib/libgtk-3.so.0
#21 0x00007ffff78e8074 in gtk_window_activate_key () at /usr/lib/libgtk-3.so.0
#22 0x00007ffff78e8312 in () at /usr/lib/libgtk-3.so.0
#23 0x000055555567763f in nautilus_window_key_press_event ()
#24 0x00007ffff7917825 in () at /usr/lib/libgtk-3.so.0
#25 0x00007ffff709016e in g_signal_emit_valist () at /usr/lib/libgobject-2.0.so.0
#26 0x00007ffff7090a80 in g_signal_emit () at /usr/lib/libgobject-2.0.so.0
#27 0x00007ffff78c31e5 in () at /usr/lib/libgtk-3.so.0
#28 0x00007ffff777b029 in () at /usr/lib/libgtk-3.so.0
#29 0x00007ffff777d15c in gtk_main_do_event () at /usr/lib/libgtk-3.so.0
#30 0x00007ffff747aa06 in () at /usr/lib/libgdk-3.so.0
#31 0x00007ffff74ac755 in () at /usr/lib/libgdk-3.so.0
#32 0x00007ffff7cf23cf in g_main_context_dispatch () at /usr/lib/libglib-2.0.so.0
#33 0x00007ffff7cf3f89 in () at /usr/lib/libglib-2.0.so.0
#34 0x00007ffff7cf3fce in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#35 0x00007ffff715e7ee in g_application_run () at /usr/lib/libgio-2.0.so.0
#36 0x000055555559410a in main ()