application: Check pending location on clone-window

Cloning the window while its location is null (i.e. the attributes of
the pending location file are still being waited on) results in a failed
assertion, which is less than desirable. That can be fixed by
preemptively checking if there is a pending location on the slot and
using that in the new window.

Fixes https://gitlab.gnome.org/GNOME/nautilus/issues/649


(cherry picked from commit d6f61a88237bc1396f1f054393a16e1425f59445)